# understandingSortingAlgos

./: CMakeLists.txt  README.md  insertionSort.cpp  utils.h
sortinTestCodes/: CMakeLists.txt  main.cpp
sortingAlgorithms/: mergeSort.cpp
sortingTestCodes/: main.cpp
